--- a/about.yml
+++ b/about.yml
@@ -4,10 +4,8 @@ job: QA Engineer
 level: junior
 email: se4viy@gmail.com
 description: |
-  Этот текст — описание в свободной форме. Здесь можно рассказать пару интересных фактов про себя.
-
-  Текст можно написать в несколько абзацев
-skills: # Список навыков в виде списка, можете написать сюда что-то свое
+Hello!
+skills:
   - Функциональное тестирование
   - Написание багрепортов
   - Linux
