--- a/requirements.yml
+++ b/requirements.yml
@@ -17,3 +17,4 @@ implicit:
   - Должна быть возможность выбрать какие именно товары заказать из корзины
   - Должна быть возможность убрать конкретное число позиции товаров в корзине, если их несколько
   - Должно быть уведомление о добавлении товара в корзину или визуальное изменение кнопки
+  - Сайт должен быть адаптивным
