--- a/test-cases.yml
+++ b/test-cases.yml
@@ -65,5 +65,20 @@
     - Нажимаем на кнопку Корзина в верхнем меню экрана
     - На странице корзины нажимаем "Оформить заказ"
   expected-result: |
-    Открывается уведомление об успешном оформлении заказа 
-  ---
+    Открывается уведомление об успешном оформлении заказа
+ ---
+  - summary: |
+    Проверка удаления товаров из корзины
+  requirement: |
+    Пользователь должен иметь возможность удалять товары из корзины
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликает на кнопку "В Корзину"
+    - Нажимаем на кнопку Корзина в верхнем меню экрана
+    - Нажимаем кнопку удалить возле ненужного товара
+  expected-result: |
+    Товар удаляется из корзины и сумма изменяется с учетом удаленного товара
+ ---
