--- a/bugreports.yml
+++ b/bugreports.yml
@@ -53,7 +53,7 @@
     Пустой флажок фильтрует все товары с текущей страницы, при этом выводит товары с других страниц
 ---
 - summary: |
-    Мобильная версия сайта
+    Адаптивность сайта
   environment: |
     Версия 126.0.6478.182 (Официальная сборка), (64 бит)
     IPhone 12 Pro
