--- a/regress-report.yml
+++ b/regress-report.yml
@@ -114,3 +114,19 @@
     - Осмотреть страницу в соотвествии с макетом
   expected-result: |
     Открываектся мобильная версия сайта
+ ---
+bugreports:
+  - summary: |
+      Пустая строка в категории товаров
+    environment: |
+      Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+      Windows 11 Pro 23H2
+    steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Найти в боком меню Выпадающий список товаров
+    3. Выбрать пустую строку
+    4. Попробовать отфильтровать товары
+    expected-result: |
+      Отсутсвие лишних элементов в каталоге товаров
+    actual-result: |
+      Есть пустой элемент в каталоге товаров и он препятствует дальнейшей фильтрации
