--- a/about.yml
+++ b/about.yml
@@ -8,6 +8,6 @@ Hello!
 skills:
   - Функциональное тестирование
   - Написание багрепортов
-  - Linux
   - Слепая печать
-  - Английский язык C1
+  - Английский язык B1 
+  - Графические редакторы Photoshop, Figma
