--- a/bugreports.yml
+++ b/bugreports.yml
@@ -6,9 +6,9 @@
     Windows 11 Pro 23H2
   steps-to-reproduce: |
     1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. Ввести в поисковой строке "Powder"    
+    2. Ввести в поисковой строке "Red"    
   expected-result: |
-    На странице отобралятся все товары с "Powder" в названии
+    На странице отобралятся все товары с "Red" в названии
   actual-result: |
     Отображаются не все товары поискового запроса, а только с текущей страницы
 ---
