--- a/test-cases.yml
+++ b/test-cases.yml
@@ -8,9 +8,9 @@
     https://hexlet-products-store.vercel.app/
   steps:
     - Находим поисковую строку
-    - Вводим Powder
+    - Вводим "Red"
   expected-result: |
-    В списке товаров должна остаться только товары с "Powder" в названии
+    В списке товаров должна остаться только товары с "Red" в названии
 ---
 - summary: |
     Проверка работоспособности категорий
