--- a/about.yml
+++ b/about.yml
@@ -10,4 +10,4 @@ skills:
   - Написание багрепортов
   - Слепая печать
   - Английский язык B1 
-  - Графические редакторы Photoshop, Figma
+  - Графические редакторы: "Photoshop, Figma"
