--- a/about.yml
+++ b/about.yml
@@ -4,10 +4,10 @@ job: QA Engineer
 level: junior
 email: se4viy@gmail.com
 description: |
-Hello!
+  Hello
 skills:
-  - Функциональное тестирование
-  - Написание багрепортов
+  - функциональное тестирование
+  - написание багрепортов
   - Linux
-  - Слепая печать
-  - Английский язык C1
+  - слепая печать
+  - английский язык C1
