--- a/about.yml
+++ b/about.yml
@@ -8,6 +8,7 @@ description: |
 skills:
   - функциональное тестирование
   - написание багрепортов
-  - Linux
+  - Photoshop
+  - Figma
   - слепая печать
-  - английский язык C1
+  - английский язык B1
