--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,66 +1,96 @@
 ---
 - summary: |
-    Поиск товара происходит только на текущей странице
-  environment: |
-    Версия 126.0.6478.182 (Официальная сборка), (64 бит)
-    Windows 11 Pro 23H2
-  steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. Ввести в поисковой строке "Red"    
+    Проверка работоспособности поисковой строки
+  requirement: |
+    Пользователь должен иметь возможность искать товары по ключевому слову или категории
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  steps:
+    - Находим поисковую строку
+    - Вводим "Red"
   expected-result: |
-    На странице отобралятся все товары с "Red" в названии
-  actual-result: |
-    Отображаются не все товары поискового запроса, а только с текущей страницы
+    В списке товаров должна остаться только товары с "Red" в названии
+
+- summary: |
+    Проверка работоспособности категорий
+  requirement: |
+    Пользователь должен иметь возможность искать товары по ключевому слову или категории
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  steps:
+    - Находим выпадающий список категорий
+    - Выбираем furniture
+  expected-result: |
+    В списке товаров должна остаться только мебель
+
+- summary: |
+    Проверка работоспособности фильтров
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  steps:
+    - Находим категории товаров в боковом меню
+    - отмечаем флажок Annibale Colombo
+  expected-result: |
+    В списке товаров должна остаться только мебель Annibale Colombo
+
+- summary: |
+    Проверка работоспособности карточек товаров
+  requirement: |
+    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  steps:
+    - Находим нужный товар на главной странице сайта
+    - Кликаем на карточку товара
+  expected-result: |
+    Открывается страница товара с его ценой, рейтингом и описанием
     
 - summary: |
-    Категории товаров отображаются только для текущей страницы
-  environment: |
-    Версия 126.0.6478.182 (Официальная сборка), (64 бит)
-    Windows 11 Pro 23H2
-  steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. Открыть выпадающий список категорий товаров    
+    Проверка работоспособности корзины
+  requirement: |
+    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликает на кнопку "В Корзину"
+    - Нажимаем на кнопку Корзина в верхнем меню экрана
   expected-result: |
-    В списке отображаются все категории товаров
-  actual-result: |
-    Отображаются только категории товаров текущей страницы
+    Открывается корзина пользователя со списком добавленных товаров
 
 - summary: |
-    Не работают фильтры для товаров с других страниц
-  environment: |
-    Версия 126.0.6478.182 (Официальная сборка), (64 бит)
-    Windows 11 Pro 23H2
-  steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. Перейти на следующую страницу товаров    
+    Проверка оформления заказа
+  requirement: |
+    Пользователь должен иметь возможность добавлять товары в корзину и делать заказ
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликает на кнопку "В Корзину"
+    - Нажимаем на кнопку Корзина в верхнем меню экрана
+    - На странице корзины нажимаем "Оформить заказ"
   expected-result: |
-    В меню отобраются флажки для фильтрации товаров текущего запроса
-  actual-result: |
-    Нет флажков для фильтрации товаров
+    Открывается уведомление об успешном оформлении заказа
 
 - summary: |
-    Пустой флажок для фильтрации
-  environment: |
-    Версия 126.0.6478.182 (Официальная сборка), (64 бит)
-    Windows 11 Pro 23H2
-  steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. В боковом меню найти пустой флажок
-    3. Выбрать пустой флажок
+    Проверка удаления товаров из корзины
+  requirement: |
+    Пользователь должен иметь возможность удалять товары из корзины
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликает на кнопку "В Корзину"
+    - Нажимаем на кнопку Корзина в верхнем меню экрана
+    - Нажимаем кнопку удалить возле ненужного товара
   expected-result: |
-    Отсутствие этого элемента
-  actual-result: |
-    Пустой флажок фильтрует все товары с текущей страницы, при этом выводит товары с других страниц
-
-- summary: |
-    Адаптивность сайта
-  environment: |
-    Версия 126.0.6478.182 (Официальная сборка), (64 бит)
-    IPhone 12 Pro
-  steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-  expected-result: |
-    Загружается мобильная версия сайта
-  actual-result: |
-    Загружается обычная версия сайта
-    Ошибка изображена на скриншоте bug1.jpg и bug2.jpg
+    Товар удаляется из корзины и сумма изменяется с учетом удаленного товара
