--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,4 +1,5 @@
 ---
+test-cases:
 - summary: |
     Проверка работоспособности поисковой строки
   status: fail
@@ -122,10 +123,10 @@ bugreports:
       Версия 126.0.6478.182 (Официальная сборка), (64 бит)
       Windows 11 Pro 23H2
     steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. Найти в боком меню Выпадающий список товаров
-    3. Выбрать пустую строку
-    4. Попробовать отфильтровать товары
+      1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+      2. Найти в боком меню Выпадающий список товаров
+      3. Выбрать пустую строку
+      4. Попробовать отфильтровать товары
     expected-result: |
       Отсутсвие лишних элементов в каталоге товаров
     actual-result: |
