--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,96 +1,32 @@
 ---
 - summary: |
-    Проверка работоспособности поисковой строки
+    Краткое описание тест кейса. Пример: Проверка входа пользователя с существующими логином и паролем
   requirement: |
-    Пользователь должен иметь возможность искать товары по ключевому слову или категории
+    Тестируемое требование. Например: При верном вводе логине и пароля пользователь должен войти в систему
   prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
+    Это условия, которые необходимы для проведения тест кейса. Они должны быть выполнены еще до запуска тест кейса.
+    Например: открыта страница логина
+  test-data: |
+    Тестовые данные
+    Логин = ilona Пароль = password
   steps:
-    - Находим поисковую строку
-    - Вводим "Red"
+    - Вводим логин
+    - Вводим пароль
+    - Нажимаем кнопку "Войти"
   expected-result: |
-    В списке товаров должна остаться только товары с "Red" в названии
+    Пользователь должен попасть на главную страницу
 
 - summary: |
-    Проверка работоспособности категорий
+    Проверка входа пользователя с несуществующими логином и паролем
   requirement: |
-    Пользователь должен иметь возможность искать товары по ключевому слову или категории
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
+    При неправильном логине или пароле пользователь должен получить сообщение об ошибке
+  prerequisites:
+    Открыта страница логина
+  test-data: |
+    Логин = Логин = hexlet Пароль = badpass
   steps:
-    - Находим выпадающий список категорий
-    - Выбираем furniture
+    - Вводим логин
+    - Вводим пароль
+    - Нажимаем кнопку "Войти"
   expected-result: |
-    В списке товаров должна остаться только мебель
-
-- summary: |
-    Проверка работоспособности фильтров
-  requirement: |
-    Пользователь должен иметь возможность фильтровать товары
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим категории товаров в боковом меню
-    - отмечаем флажок Annibale Colombo
-  expected-result: |
-    В списке товаров должна остаться только мебель Annibale Colombo
-
-- summary: |
-    Проверка работоспособности карточек товаров
-  requirement: |
-    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим нужный товар на главной странице сайта
-    - Кликаем на карточку товара
-  expected-result: |
-    Открывается страница товара с его ценой, рейтингом и описанием
-    
-- summary: |
-    Проверка работоспособности корзины
-  requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
-    - Нажимаем на кнопку Корзина в верхнем меню экрана
-  expected-result: |
-    Открывается корзина пользователя со списком добавленных товаров
-
-- summary: |
-    Проверка оформления заказа
-  requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и делать заказ
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
-    - Нажимаем на кнопку Корзина в верхнем меню экрана
-    - На странице корзины нажимаем "Оформить заказ"
-  expected-result: |
-    Открывается уведомление об успешном оформлении заказа
-
-- summary: |
-    Проверка удаления товаров из корзины
-  requirement: |
-    Пользователь должен иметь возможность удалять товары из корзины
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
-    - Нажимаем на кнопку Корзина в верхнем меню экрана
-    - Нажимаем кнопку удалить возле ненужного товара
-  expected-result: |
-    Товар удаляется из корзины и сумма изменяется с учетом удаленного товара
+    Пользователь должен попасть на главную страницу
