--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,32 +1,13 @@
 ---
 - summary: |
-    Краткое описание тест кейса. Пример: Проверка входа пользователя с существующими логином и паролем
+    Проверка работоспособности поисковой строки
   requirement: |
-    Тестируемое требование. Например: При верном вводе логине и пароля пользователь должен войти в систему
+    Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
-    Это условия, которые необходимы для проведения тест кейса. Они должны быть выполнены еще до запуска тест кейса.
-    Например: открыта страница логина
-  test-data: |
-    Тестовые данные
-    Логин = ilona Пароль = password
+    Открыта главная страница сайта
   steps:
-    - Вводим логин
-    - Вводим пароль
+    - Находим поисковую строку
+    - Вводим "Red"
     - Нажимаем кнопку "Войти"
   expected-result: |
-    Пользователь должен попасть на главную страницу
-
-- summary: |
-    Проверка входа пользователя с несуществующими логином и паролем
-  requirement: |
-    При неправильном логине или пароле пользователь должен получить сообщение об ошибке
-  prerequisites:
-    Открыта страница логина
-  test-data: |
-    Логин = Логин = hexlet Пароль = badpass
-  steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку "Войти"
-  expected-result: |
-    Пользователь должен попасть на главную страницу
+    В списке товаров должна остаться только товары с "Red" в названии
