--- a/test-cases.yml
+++ b/test-cases.yml
@@ -5,9 +5,11 @@
     Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
     Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
   steps:
     - Находим поисковую строку
     - Вводим "Red"
-    - Нажимаем кнопку "Войти"
   expected-result: |
     В списке товаров должна остаться только товары с "Red" в названии
