--- a/test-cases.yml
+++ b/test-cases.yml
@@ -13,3 +13,18 @@
     - Вводим "Red"
   expected-result: |
     В списке товаров должна остаться только товары с "Red" в названии
+
+- summary: |
+    Проверка работоспособности категорий
+  requirement: |
+    Пользователь должен иметь возможность искать товары по ключевому слову или категории
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим выпадающий список категорий
+    - Открываем выпадающий список
+  expected-result: |
+    В списке должны отобразиться все категории товаров
