--- a/regress-report.yml
+++ b/regress-report.yml
@@ -37,10 +37,10 @@ test-cases:
     Открыта главная страница сайта
     https://hexlet-products-store.vercel.app/
   steps:
-    - Находим категории товаров в боковом меню
-    - отмечаем флажок Annibale Colombo
+    - Находим фильтры товаров в боковом меню
+    - Отмечаем флажок нужного фильтра
   expected-result: |
-    В списке товаров должна остаться только мебель Annibale Colombo
+    В списке товаров должна остаться только товары из фильтра
 
 - summary: |
     Проверка работоспособности карточек товаров
