--- a/test-cases.yml
+++ b/test-cases.yml
@@ -28,3 +28,97 @@
     - Открываем выпадающий список
   expected-result: |
     В списке должны отобразиться все категории товаров
+
+- summary: |
+    Проверка работоспособности фильтров
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры товаров в боковом меню
+    - Отмечаем флажок нужного фильтра
+  expected-result: |
+    В списке товаров должна остаться только товары из фильтра
+
+- summary: |
+    Проверка работоспособности карточек товаров
+  requirement: |
+    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим нужный товар на главной странице сайта
+    - Кликаем на карточку товара
+  expected-result: |
+    Открывается страница товара с его ценой, рейтингом и описанием
+
+- summary: |
+    Проверка работоспособности корзины
+  requirement: |
+    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликает на кнопку "В Корзину"
+    - Нажимаем на кнопку Корзина в верхнем меню экрана
+  expected-result: |
+    Открывается корзина пользователя со списком добавленных товаров 
+
+- summary: |
+    Проверка оформления заказа
+  requirement: |
+    Пользователь должен иметь возможность добавлять товары в корзину и делать заказ
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликает на кнопку "В Корзину"
+    - Нажимаем на кнопку Корзина в верхнем меню экрана
+    - На странице корзины нажимаем "Оформить заказ"
+  expected-result: |
+    Открывается уведомление об успешном оформлении заказа
+
+- summary: |
+    Проверка удаления товаров из корзины
+  requirement: |
+    Пользователь должен иметь возможность удалять товары из корзины
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликает на кнопку "В Корзину"
+    - Нажимаем на кнопку Корзина в верхнем меню экрана
+    - Нажимаем кнопку удалить возле ненужного товара
+  expected-result: |
+    Товар удаляется из корзины и сумма изменяется с учетом удаленного товара
+
+- summary: |
+    Загрузка мобильной версия сайта
+  requirement: |
+    Сайт должен иметь мобильную версию
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Осмотреть страницу в соотвествии с макетом
+  expected-result: |
+    Открываектся мобильная версия сайта
