--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,96 +1,16 @@
 ---
 - summary: |
-    Проверка работоспособности поисковой строки
-  requirement: |
-    Пользователь должен иметь возможность искать товары по ключевому слову или категории
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим поисковую строку
-    - Вводим "Red"
+    Не работает восстановление пароля
+  environment: |
+    Google Chrome	107.0.5304.121 (Официальная сборка) (64 бит)
+    ОС Linux 22.04
+  steps-to-reproduce: |
+    1. Зайти на страницу логина https://runit.hexlet.ru/login
+    2. Нажать ссылку "не помню пароль"
+    3. Ввести почту и нажать "Восстановить пароль"
   expected-result: |
-    В списке товаров должна остаться только товары с "Red" в названии
-
-- summary: |
-    Проверка работоспособности категорий
-  requirement: |
-    Пользователь должен иметь возможность искать товары по ключевому слову или категории
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим выпадающий список категорий
-    - Выбираем furniture
-  expected-result: |
-    В списке товаров должна остаться только мебель
-
-- summary: |
-    Проверка работоспособности фильтров
-  requirement: |
-    Пользователь должен иметь возможность фильтровать товары
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим категории товаров в боковом меню
-    - отмечаем флажок Annibale Colombo
-  expected-result: |
-    В списке товаров должна остаться только мебель Annibale Colombo
-
-- summary: |
-    Проверка работоспособности карточек товаров
-  requirement: |
-    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим нужный товар на главной странице сайта
-    - Кликаем на карточку товара
-  expected-result: |
-    Открывается страница товара с его ценой, рейтингом и описанием
-    
-- summary: |
-    Проверка работоспособности корзины
-  requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
-    - Нажимаем на кнопку Корзина в верхнем меню экрана
-  expected-result: |
-    Открывается корзина пользователя со списком добавленных товаров
-
-- summary: |
-    Проверка оформления заказа
-  requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и делать заказ
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
-    - Нажимаем на кнопку Корзина в верхнем меню экрана
-    - На странице корзины нажимаем "Оформить заказ"
-  expected-result: |
-    Открывается уведомление об успешном оформлении заказа
-
-- summary: |
-    Проверка удаления товаров из корзины
-  requirement: |
-    Пользователь должен иметь возможность удалять товары из корзины
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
-    - Нажимаем на кнопку Корзина в верхнем меню экрана
-    - Нажимаем кнопку удалить возле ненужного товара
-  expected-result: |
-    Товар удаляется из корзины и сумма изменяется с учетом удаленного товара
+    На странице формы будет сообщение с просьбой проверить почту.
+    На почту придет письмо со ссылкой на восстановление пароля.
+  actual-result: |
+    На странице ничего не происходит.
+    В консоли браузера в Devtools выводится почта
