--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,16 +1,14 @@
 ---
 - summary: |
-    Не работает восстановление пароля
+    Не работает поисковая строка
   environment: |
-    Google Chrome	107.0.5304.121 (Официальная сборка) (64 бит)
-    ОС Linux 22.04
+    Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
   steps-to-reproduce: |
-    1. Зайти на страницу логина https://runit.hexlet.ru/login
-    2. Нажать ссылку "не помню пароль"
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Ввести в поисковой строке "Red"
     3. Ввести почту и нажать "Восстановить пароль"
   expected-result: |
-    На странице формы будет сообщение с просьбой проверить почту.
-    На почту придет письмо со ссылкой на восстановление пароля.
+    На странице отобралятся все товары с "Red" в названии
   actual-result: |
-    На странице ничего не происходит.
-    В консоли браузера в Devtools выводится почта
+    Отображаются не все товары поискового запроса, а только с текущей страницы
