--- a/bugreports.yml
+++ b/bugreports.yml
@@ -2,7 +2,7 @@
 - summary: |
     Не работает поисковая строка
   environment: |
-    Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
     Windows 11 Pro 23H2
   steps-to-reproduce: |
     1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
@@ -12,3 +12,57 @@
     На странице отобралятся все товары с "Red" в названии
   actual-result: |
     Отображаются не все товары поискового запроса, а только с текущей страницы
+
+- summary: |
+    Категории товаров отображаются только для текущей страницы
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Открыть выпадающий список категорий товаров
+  expected-result: |
+    В списке отображаются все категории товаров
+  actual-result: |
+    Отображаются только категории товаров текущей страницы
+
+- summary: |
+    Не работают фильтры для товаров с других страниц
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Перейти на следующую страницу товаров
+    3. Найти фильтры товаров в боковом меню
+  expected-result: |
+    В меню отобраются флажки для фильтрации товаров
+  actual-result: |
+    Нет флажков для фильтрации товаров
+
+- summary: |
+    Пустой флажок для фильтрации
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Найти флажки для фильтрации товаров в боком меню
+    3. Выбрать пустой флажок
+  expected-result: |
+    Отсутствие этого элемента
+  actual-result: |
+    Пустой флажок фильтрует все товары с текущей страницы, при этом выводит товары с других страниц
+
+- summary: |
+    Не загружается мобильная версия сайта
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    IPhone 12 Pro
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+  expected-result: |
+    Загружается мобильная версия сайта
+  actual-result: |
+    Загружается обычная версия сайта
+    Ошибка изображена на скриншоте bug1.jpg и bug2.jpg
