--- a/test-cases.yml
+++ b/test-cases.yml
@@ -90,7 +90,7 @@
     - Нажимаем на кнопку Корзина в верхнем меню экрана
     - На странице корзины нажимаем "Оформить заказ"
   expected-result: |
-    Открывается уведомление об успешном оформлении заказа
+    Открывается уведомление об успешном оформлении заказа и запрос уходит на сервер
 
 - summary: |
     Проверка удаления товаров из корзины
