--- a/bugreports.yml
+++ b/bugreports.yml
@@ -65,3 +65,19 @@
   actual-result: |
     Загружается обычная версия сайта
     Ошибка изображена на скриншоте bug1.jpg и bug2.jpg
+
+- summary: |
+    Запрос не о заказе не уходит на сервер
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Добавить любой товар в корзину
+    3. Нажать "Корзина" в верхнем меню экрана
+    4. На странице корзины нажать оформить заказ
+  expected-result: |
+    Открывается уведомление об успешном оформлении заказа и запрос уходит на сервер
+  actual-result: |
+    Открывается уведомление об успешном оформлении заказа, но запрос не уходит на сервер
+    Ошибка изображена на скриншоте bug3.jpg
