--- a/bugreports.yml
+++ b/bugreports.yml
@@ -67,7 +67,7 @@
     Ошибка изображена на скриншоте bug1.jpg и bug2.jpg
 
 - summary: |
-    Запрос не о заказе не уходит на сервер
+    Запрос о заказе не уходит на сервер
   environment: |
     Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
     Windows 11 Pro 23H2
