--- a/regress-report.yml
+++ b/regress-report.yml
@@ -73,7 +73,7 @@ test-cases:
 
 - summary: |
     Проверка оформления заказа
-  status: pass
+  status: fail
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину и делать заказ
   prerequisites: |
@@ -85,7 +85,7 @@ test-cases:
     - Нажимаем на кнопку Корзина в верхнем меню экрана
     - На странице корзины нажимаем "Оформить заказ"
   expected-result: |
-    Открывается уведомление об успешном оформлении заказа
+    Открывается уведомление об успешном оформлении заказа и запрос уходит на сервер
 
 - summary: |
     Проверка удаления товаров из корзины
@@ -114,7 +114,7 @@ test-cases:
   steps:
     - Осмотреть страницу в соотвествии с макетом
   expected-result: |
-    Открываектся мобильная версия сайта
+    Открывается мобильная версия сайта
 
 bugreports:
   - summary: |
