--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Проверка работоспособности поисковой строки
+    Проверка поиска
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
@@ -15,7 +15,7 @@
     В списке товаров должна остаться только товары с "Red" в названии
 
 - summary: |
-    Проверка работоспособности категорий
+    Проверка фильтрации по категориям
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
@@ -30,7 +30,7 @@
     В списке должны отобразиться все категории товаров
 
 - summary: |
-    Проверка работоспособности фильтров
+    Проверка фильтров
   requirement: |
     Пользователь должен иметь возможность фильтровать товары
   prerequisites: |
@@ -45,7 +45,7 @@
     В списке товаров должна остаться только товары из фильтра
 
 - summary: |
-    Проверка работоспособности карточек товаров
+    Проверка карточек товаров
   requirement: |
     Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
   prerequisites: |
@@ -60,7 +60,7 @@
     Открывается страница товара с его ценой, рейтингом и описанием
 
 - summary: |
-    Проверка работоспособности корзины
+    Проверка добавления товара в корзину
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   prerequisites: |
@@ -108,17 +108,3 @@
     - Нажимаем кнопку удалить возле ненужного товара
   expected-result: |
     Товар удаляется из корзины и сумма изменяется с учетом удаленного товара
-
-- summary: |
-    Загрузка мобильной версия сайта
-  requirement: |
-    Сайт должен иметь мобильную версию
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  test-data: |
-    Тестовые данные
-  steps:
-    - Осмотреть страницу в соотвествии с макетом
-  expected-result: |
-    Открываектся мобильная версия сайта
