--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Не работает поисковая строка
+    Поиск работает только на текущей странице
   environment: |
     Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
     Windows 11 Pro 23H2
@@ -23,7 +23,7 @@
   expected-result: |
     В списке отображаются все категории товаров
   actual-result: |
-    Отображаются только категории товаров текущей страницы
+    Отображаются только категории товаров текущей страницы. Ошибка изображена на скриншоте bug4.jpg
 
 - summary: |
     Не работают фильтры для товаров с других страниц
@@ -37,7 +37,7 @@
   expected-result: |
     В меню отобраются флажки для фильтрации товаров
   actual-result: |
-    Нет флажков для фильтрации товаров
+    Нет флажков для фильтрации товаров. Ошибка изображена на скриншоте bug5.jpg
 
 - summary: |
     Пустой флажок для фильтрации
@@ -54,7 +54,7 @@
     Пустой флажок фильтрует все товары с текущей страницы, при этом выводит товары с других страниц
 
 - summary: |
-    Не загружается мобильная версия сайта
+    Не работает адаптивная верстка
   environment: |
     Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
     IPhone 12 Pro
@@ -79,5 +79,5 @@
   expected-result: |
     Открывается уведомление об успешном оформлении заказа и запрос уходит на сервер
   actual-result: |
-    Открывается уведомление об успешном оформлении заказа, но запрос не уходит на сервер
+    Открывается уведомление об успешном оформлении заказа, но запрос уходит на сервер c ошибкой (500)
     Ошибка изображена на скриншоте bug3.jpg
