--- a/bugreports.yml
+++ b/bugreports.yml
@@ -51,7 +51,7 @@
   expected-result: |
     Отсутствие этого элемента
   actual-result: |
-    Пустой флажок фильтрует все товары с текущей страницы, при этом выводит товары с других страниц
+    Пустой флажок фильтрует все товары с текущей страницы, при этом выводит товары с других страниц. Ошибка изображена на скриншоте bug6.jpg
 
 - summary: |
     Не работает адаптивная верстка
