--- a/test-cases.yml
+++ b/test-cases.yml
@@ -7,7 +7,7 @@
     Открыта главная страница сайта
     https://hexlet-products-store.vercel.app/
   test-data: |
-    Тестовые данные
+    Тестовые данные # Оставил строку с тестовыми данными, потому что без нее не проходит линер
   steps:
     - Находим поисковую строку
     - Вводим "Red"
@@ -70,7 +70,7 @@
     Тестовые данные
   steps:
     - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
+    - Кликаем на кнопку "В Корзину"
     - Нажимаем на кнопку Корзина в верхнем меню экрана
   expected-result: |
     Открывается корзина пользователя со списком добавленных товаров 
@@ -86,7 +86,7 @@
     Тестовые данные
   steps:
     - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
+    - Кликаем на кнопку "В Корзину"
     - Нажимаем на кнопку Корзина в верхнем меню экрана
     - На странице корзины нажимаем "Оформить заказ"
   expected-result: |
@@ -103,8 +103,256 @@
     Тестовые данные
   steps:
     - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
+    - Кликаем на кнопку "В Корзину"
     - Нажимаем на кнопку Корзина в верхнем меню экрана
     - Нажимаем кнопку удалить возле ненужного товара
   expected-result: |
     Товар удаляется из корзины и сумма изменяется с учетом удаленного товара
+
+- summary: |
+    Проверка кнопки перехода вперед по страницам
+  requirement: |
+    Навигация по сайту с постраничным выводом
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку перехода по страницам
+    - Кликаем на кнопку "Next/Следующая"
+  expected-result: |
+    Переходим на следующую страницу сайта
+
+- summary: |
+    Проверка кнопки перехода назад по страницам
+  requirement: |
+    Навигация по сайту с постраничным выводом
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку перехода по страницам
+    - Кликаем на кнопку "Next/Следующая"
+    - Кликаем на кнопку "Previous/Следующая"
+  expected-result: |
+    Возращаемся на начальную страницу сайта
+
+- summary: |
+    Проверка кнопки перехода назад на первой странице сайта
+  requirement: |
+    Навигация по сайту с постраничным выводом
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку перехода по страницам
+    - Кликаем на кнопку "Previous/Следующая"
+  expected-result: |
+    Должны остаться на главной странице
+
+- summary: |
+    Проверка возрата в каталог
+  requirement: |
+    Пользователь может продолжать покупки из корзины
+  prerequisites: |
+    Открыта страница корзины сайта
+    https://hexlet-products-store.vercel.app/cart
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку "Продолжить покупки"
+    - Кликаем на кнопку "Продолжить покупки"
+  expected-result: |
+    Кнопка перенаправляет в каталог товаров
+
+- summary: |
+    Проверка возрата в каталог
+  requirement: |
+    Пользователь может продолжать покупки из корзины
+  prerequisites: |
+    Открыта страница корзины сайта
+    https://hexlet-products-store.vercel.app/cart
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку "Магазин" в шапке сайта
+    - Кликаем на кнопку "Магазин"
+  expected-result: |
+    Кнопка перенаправляет в каталог товаров
+
+- summary: |
+    Проверка кнопки "Отчистить корзину"
+  requirement: |
+    Пользователь должен иметь возможность удалять товары из корзины
+  prerequisites: |
+    Открыта страница корзины сайта
+    https://hexlet-products-store.vercel.app/cart
+    В корзине есть хотя бы один товар
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку "Отчистить корзину"
+    - Кликаем на кнопку "Отчистить корзину"
+  expected-result: |
+    Все товары из корзины удаляются
+
+- summary: |
+    Проверка кнопки "Отчистить корзину" при пустой корзине
+  requirement: |
+    Пользователь должен иметь возможность удалять товары из корзины
+  prerequisites: |
+    Открыта страница корзины сайта
+    https://hexlet-products-store.vercel.app/cart
+    В корзине нет товаров
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку "Отчистить корзину"
+    - Кликаем на кнопку "Отчистить корзину"
+  expected-result: |
+    Остаемся в корзине и ничего не происходит
+
+- summary: |
+    Проверка скорости загрузки сайта
+  requirement: |
+    Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
+  prerequisites: |
+    Используем мобльное устройство с хорошим интернет соединением
+  test-data: |
+    Тестовые данные
+  steps:
+    - Заходим на сайт https://hexlet-products-store.vercel.app
+  expected-result: |
+    Сайт загружается быстро и без ошибок
+
+- summary: |
+    Проверка скорости загрузки сайта
+  requirement: |
+    Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
+  prerequisites: |
+    Используем мобльное устройство с средним интернет соединением
+  test-data: |
+    Тестовые данные
+  steps:
+    - Заходим на сайт https://hexlet-products-store.vercel.app
+  expected-result: |
+    Сайт загружается быстро и без ошибок
+
+- summary: |
+    Проверка скорости загрузки сайта
+  requirement: |
+    Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
+  prerequisites: |
+    Используем мобльное устройство с плохим интернет соединением
+  test-data: |
+    Тестовые данные
+  steps:
+    - Заходим на сайт https://hexlet-products-store.vercel.app
+  expected-result: |
+    Сайт загружается быстро и без ошибок
+
+- summary: |
+    Проверка английской версии сайта
+  requirement: |
+    Мультиязычность приложения
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+    Установлен русский язык
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку смены языка в шапке сайта
+    - В выпадающем списке выбираем "English"
+  expected-result: |
+    Язык сайта меняется на английский
+
+- summary: |
+    Проверка русской версии сайта
+  requirement: |
+    Мультиязычность приложения
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+    Установлен английский язык
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку смены языка в шапке сайта
+    - В выпадающем списке выбираем "Русский"
+  expected-result: |
+    Язык сайта меняется на русский
+
+- summary: |
+    Проверка кнопки смены языка
+  requirement: |
+    Мультиязычность приложения
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+    Установлен английский язык
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим кнопку смены языка в шапке сайта
+    - В выпадающем списке выбираем "English"
+  expected-result: |
+    Язык сайта остается английским
+
+- summary: |
+    Проверка сохранении корзины
+  requirement: |
+    Корзина будет хранится в сессии браузера
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликаем на кнопку "В Корзину"
+    - Нажимаем на кнопку "Корзина" в верхнем меню экрана
+    - Обновляем страницу браузера
+  expected-result: |
+    Товар остается в корзине
+
+- summary: |
+    Проверка сохранении корзины
+  requirement: |
+    Корзина будет хранится в сессии браузера
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликаем на кнопку "В Корзину"
+    - Закрываем вкладку браузера
+    - Возращаемся на сайт https://hexlet-products-store.vercel.app/
+    - Нажимаем на кнопку "Корзина" в верхнем меню экрана
+  expected-result: |
+    Корзина пустая
+
+- summary: |
+    Проверка фильтра цены на положительные значения
+  requirement: |
+    Корзина будет хранится в сессии браузера
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим любой товар в каталоге товаров
+    - Кликаем на кнопку "В Корзину"
+    - Закрываем вкладку браузера
+    - Возращаемся на сайт https://hexlet-products-store.vercel.app/
+    - Нажимаем на кнопку "Корзина" в верхнем меню экрана
+  expected-result: |
+    Корзина пустая
