--- a/test-cases.yml
+++ b/test-cases.yml
@@ -340,19 +340,17 @@
     Корзина пустая
 
 - summary: |
-    Проверка фильтра цены на положительные значения
+    Проверка фильтра начальной границы цены на положительные значения
   requirement: |
-    Корзина будет хранится в сессии браузера
+    Пользователь должен иметь возможность фильтровать товары
   prerequisites: |
     Открыта главная страница сайта
     https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовые данные
   steps:
-    - Находим любой товар в каталоге товаров
-    - Кликаем на кнопку "В Корзину"
-    - Закрываем вкладку браузера
-    - Возращаемся на сайт https://hexlet-products-store.vercel.app/
-    - Нажимаем на кнопку "Корзина" в верхнем меню экрана
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим
   expected-result: |
     Корзина пустая
